fixed footer sizing and spacing isuue

--- a/src/components/sections/Header/_header.scss
+++ b/src/components/sections/Header/_header.scss
@@ -28,8 +28,8 @@
  
   .logo {
     .logo-img {
-      max-height: 100px;
-      width: 100px;
+      max-height: 130px;
+      width: 130px;
       display: block;
     }
   }
