--- a/src/components/sections/footer/Footer.scss
+++ b/src/components/sections/footer/Footer.scss
@@ -5,10 +5,11 @@
   background-color: $color-primary;
   color: $color-text-light;
   padding: 3rem 1rem;
-  
+  padding-bottom: 1rem;
+
   display: flex;
   justify-content: center;
-  .footer-wrapper{
+  .footer-wrapper {
     width: 90%;
     border-top: 0.1px solid rgba($color-text-light, 0.5);
   }
@@ -16,9 +17,12 @@
     width: 80%;
     max-width: 1300px;
     margin: 0 auto;
+    padding: $spacing-2xl;
+
     @include mobile {
-       width: 90%;
-      }
+      width: 90%;
+      padding: $spacing-xs;
+    }
 
     .footer-top {
       display: flex;
@@ -29,10 +33,12 @@
       @include mobile {
         gap: $spacing-sm;
         text-align: center;
+        margin-bottom: $spacing-sm;
       }
 
       .footer-logo {
         width: 120px;
+        margin-left: -8px;
 
         @include mobile {
           width: 100px;
@@ -43,8 +49,8 @@
         font-size: $font-size-xs;
         color: $color-text-light;
         @include mobile {
-            font-size: $font-size-2xs;
-          }
+          font-size: $font-size-2xs;
+        }
       }
     }
 
@@ -52,8 +58,7 @@
       display: flex;
       justify-content: space-between;
       gap: $spacing-xl;
-      margin-bottom: $spacing-xl;
-
+      margin-bottom: $spacing-2xl;
 
       @include tablet {
         flex-direction: column;
@@ -68,9 +73,9 @@
         flex: 0 0 45%;
         @include mobile {
           margin-bottom: $spacing-lg;
-          }
+        }
 
-        h6{
+        h6 {
           font-size: $font-size-xs;
           margin-bottom: $spacing-sm;
           font-weight: $font-weight-medium;
@@ -80,9 +85,12 @@
           display: flex;
           gap: $spacing-xs;
           margin-bottom: $spacing-md;
+          @include mobile {
+            justify-content: space-between;
+          }
 
           input {
-            flex: 0.7;
+            flex: 0.9;
             padding: 0.7rem 1rem;
             border: none;
             border-radius: $radius-sm;
@@ -90,6 +98,16 @@
             background: transparent;
             color: $color-text-light;
             border: 0.1px solid rgba($color-text-light, 0.5);
+
+            ::placeholder {
+              @include mobile {
+                font-size: $font-size-xs;
+              }
+            }
+            @include mobile {
+              flex: 1;
+              font-size: $font-size-xs;
+            }
           }
 
           button {
@@ -101,6 +119,9 @@
             font-weight: lighter;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            @include mobile {
+              font-size: $font-size-xs;
+            }
 
             &:hover {
               background-color: darken($color-accent-purple, 5%);
@@ -127,9 +148,8 @@
         display: flex;
         justify-content: space-between;
         gap: $spacing-lg;
-      
-        @include mobile {
 
+        @include mobile {
           gap: $spacing-md;
         }
 
@@ -153,7 +173,7 @@
 
     .footer-bottom {
       border-top: 0.1px solid rgba($color-text-light, 0.5);
-    
+
       padding-top: $spacing-md;
       display: flex;
       justify-content: space-between;
